[package]
name = "rust-textmate"
version = "0.1.0"
authors = ["Dan Groshev <dan@dgroshev.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
onig = { git = "https://github.com/rust-onig/rust-onig.git", rev = "c4378abcbf30d58cf5f230c0d2e6375f2be05a47" }
serde = { version = "1", features = ["alloc", "derive"] }
serde_derive = "1"
serde_json = "1"
serde_path_to_error = "0.1"
snafu = { version = "0.8", features = ["rust_1_81"] }

[dev-dependencies]
test-case = "3"